--- a/Veganska varianta/index-level1-lehci.html
+++ b/Veganska varianta/index-level1-lehci.html
@@ -6,6 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Recepty</title>
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Raleway:600,800&amp;subset=latin-ext" rel="stylesheet">
+
+        <link href="https://fonts.googleapis.com/css?family=Raleway:400,800&display=swap&subset=latin-ext" rel="stylesheet">
+
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
